--- a/Ch2_MorePyMC_PyMC2.ipynb
+++ b/Ch2_MorePyMC_PyMC2.ipynb
@@ -2366,13 +2366,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a lineaer correlation between posteriors of alpha and beta. If alpha is increased, beta needs to be linearily decreased to keep the same logistic regression model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### References\n",
     "\n",
     "-  [1] Dalal, Fowlkes and Hoadley (1989),JASA, 84, 945-957.\n",
@@ -2411,9 +2404,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:Anaconda3]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-Anaconda3-py"
   },
   "language_info": {
    "codemirror_mode": {
